@@ -21,6 +21,7 @@ Farraro, Eric
 Homes, Avi
 Isaak, Josh (http://www.futurebot.com)
 Instant Games (http://www.instantgames.com.br/)
+Itterheim, Steffen (http://www.gametooldeveloper.com/)
 Gulley, Dustin
 Greer, Matthew (http://github.com/city41/cocosnet)
 Huffstatler, Phil
